<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">The Shopping List</string>
    <string name="welcome">Welcome to your Shopping List</string>
    <string name="action_settings">Settings</string>
	<string name="name">Name</string>
	<string name="gender">Gender</string>
	<string name="jobtitle">Job Title</string>
	<string name="age">Age</string>
	<string name="budget">Budget in €uro</string>
	<string name="email">Email</string>
	<string name="signup">Sign Up</string>
	
	<string name="item">Item</string>
	<string name="theShop">Shopping List</string>
	<string name="viewList">View List</string>
	<string name="clickText">Click on an item on the list to add it, </string>
	
	<string name="emailB">Email</string>
	
	<string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    
    <string-array name="job_list">
        <item>Accountant</item>
        <item>Builder</item>
        <item>Carpenter</item>
        <item>Pilot</item>
        <item>Programmer</item>
        <item>Other</item>
    </string-array>
	
    
    
    
</resources>
