<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gui_shopping_list.LoginActivity" >

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="15dp">
        
        <TextView
            android:id="@+id/welcome"
            android:text="@string/welcome" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#008080"
            android:textStyle="bold"
            android:textSize="32sp"
            android:gravity="center"
            android:padding="5dp"/>
        
        <View
			android:id="@+id/seperator"
			android:layout_width="fill_parent"
			android:layout_height="1dp"       
			android:background="#FFA500"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="8dp"/>

        <EditText 
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/name"
            android:textColorHint="#cccccc"/>
       
     	<Spinner
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
        	android:entries="@array/gender_list"/>
        
     	<Spinner 
            android:id="@+id/jobtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
        	android:entries="@array/job_list"/>
     	
     	<EditText 
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:inputType="number"
            android:hint="@string/age"
            android:textColorHint="#cccccc"
            android:maxLength="2"/>
     	
        <EditText 
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="#cccccc"/>
        
        <EditText 
            android:id="@+id/budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:hint="@string/budget"
            android:textColorHint="#cccccc"/>
        
        <Button 
            android:id="@+id/SignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="4dp"
            android:text="@string/signup"/>
        
        </LinearLayout>
    
</RelativeLayout>
